Add facebook login

--- a/GuessingGame/appsettings.json
+++ b/GuessingGame/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "FacebookAuthSettings": {
+    "AppId": "515578059436602",
+    "AppSecret": "c6d2e535c2899f14a17098ebebaeb0ea"
+  },
   "AllowedHosts": "*"
 }
